# kinozal-bot

./: Dockerfile  Pipfile  README.md  config.py  docker-compose-qbt.yaml  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: deploy.yml
bot/: config.py  constants.py  logger_config.py  main.py  telegram_bot.py  telegram_handlers.py
bot/commands/: search_command.py
custom_types/: movie_detail_service_types.py
handlers/: movie_detail_handler.py  movie_download_handler.py  search_handler.py  torrents_statuses.py
services/: exceptions.py  kinozal_auth_service.py  movie_detail_service.py  movie_search_service.py
services/kinozal_services/: movie_download_service.py  movie_search_service.py
services/qbt_services/: __init__.py  qbt_add_torrent.py  qbt_base_client.py
services/redis_services/: client.py
src/bot/: config.py  constants.py  logger_config.py  main.py
src/custom_types/: kinopoisk_types.py  movie_detail_service_types.py  torrent_types.py
src/handlers/: delete_torrent_handler.py  movie_detail_handler.py  movie_download_handler.py  pause_torrent_handler.py  refresh_plex_handler.py  search_handler.py  start_torrent_handler.py  torrent_detailed_handler.py  torrents_statuses.py  torrents_statuses_handler.py
src/models/: kinopoisk_types.py  movie_detail_service_types.py  search_provider_types.py  tmdb_types.py
src/services/: exceptions.py  kinopoisk_service.py
src/templates/: movie_search_prompt.j2
src/torrents/: __init__.py  interfaces.py  provider_registry.py
utilities/: common.py  handlers_utils.py  kinozal_utils.py
(+35 files in other folders)
