[project]
name = "kinozal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofile>=3.9.0",
    "aiogram>=3.22.0",
    "aioqbt>=1.0.0",
    "beautifulsoup4>=4.14.2",
    "coloredlogs>=15.0.1",
    "groq>=0.34.1",
    "html-to-markdown>=2.7.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pyupgrade>=3.21.0",
    "redis>=7.0.1",
]
